# yt-dlp-gui-v2

./: .gitattributes  .gitignore  Cargo.toml  LICENSE.txt  THIRD-PARTY-NOTICES.md  build.rs
.github/: README.md
assets/icons/: README.txt  manifest.csv
configs/: apple-tv-hevc-h265.conf
configs/scripts/: apple-tv-hevc-h265-after-move.ps1
src/: i18n.rs  main.rs
src/app/: app_icon.rs  app_mode.rs  batch_add_worker.rs  compatibility_profiles.rs  component_update_worker.rs  custom_chrome.rs  download_resilience.rs  download_worker.rs  format_picker_state.rs  media_probe.rs  metadata.rs  mod.rs  music_analysis.rs  music_mix_timeline.rs  music_pcm_reservoir.rs  music_segment_selector.rs  music_stream.rs  music_timestretch.rs  native_titlebar.rs  post_process_worker.rs  queue_status.rs  state.rs  thumbnail_worker.rs  tool_install_worker.rs  transcode_graph.rs  transcode_plan.rs  ui.rs
src/app/state/: app_state.rs  background_poll_actions.rs  cache_actions.rs  cookie_actions.rs  cookie_rescue.rs  download_container_actions.rs  download_range_actions.rs  item_format_actions.rs  log.rs  log_actions.rs  music_actions.rs  music_analysis_actions.rs  music_batch_actions.rs  music_cache_playlist_actions.rs  music_context_actions.rs  music_download_actions.rs  music_event_actions.rs  music_lyrics_actions.rs  music_metadata_helpers.rs  music_navigation_actions.rs  music_player_actions.rs  music_prefetch_actions.rs  music_runtime.rs  music_types.rs  music_worker_helpers.rs  options_actions.rs  prepare_actions.rs  prepare_visibility_helpers.rs  queue_batch_helpers.rs  queue_input_actions.rs  queue_input_helpers.rs  queue_item_actions.rs  queue_worker_actions.rs  queue_workflow_actions.rs  state_helpers.rs  tests.rs  ui_types.rs  workflow_download_actions.rs  workflow_runtime.rs
src/app/ui/: about_tab.rs  about_tab_controls.rs  about_tab_template.rs  advance_command_previews.rs  advance_conversion.rs  advance_conversion_template.rs  advance_cookie_manager.rs  advance_cookie_manager_template.rs  advance_cookie_rescue.rs  advance_download_controls.rs  advance_network.rs  advance_post_processing.rs  advance_source.rs  advance_tab.rs  advance_tab_template.rs  common.rs  compact_row.rs  format_picker.rs  format_picker_content.rs  format_picker_filters.rs  format_picker_header.rs  format_picker_section.rs  format_picker_selection.rs  format_picker_subtitle.rs  format_picker_table.rs  format_picker_template.rs  format_picker_time_range.rs  item_card.rs  item_card_compact.rs  (+47 more)
src/domain/: download_container.rs  download_range.rs  mod.rs  models.rs
src/i18n/: README.md  ar_ma.rs  catalog.rs  de_de.rs  el_gr.rs  en_us.rs  es_es.rs  fr_fr.rs  it_it.rs  ja_jp.rs  ko_kr.rs  pl_pl.rs  pt_br.rs  ru_ru.rs  tests.rs  uk_ua.rs  zh_cn.rs  zh_tw.rs
src/infrastructure/: app_identity.rs  component_update.rs  config.rs  cookie_site_index.rs  edition.rs  media_session.rs  mod.rs  notification.rs  output_actions.rs  portable_cleanup.rs  prepare_check.rs  process_guard.rs  sha256.rs  startup_diagnostics.rs  tool_install.rs  tools.rs  yaml_store.rs  youtube_login_rescue.rs
(+3 files in other folders)
