[package]
name = "yt-dlp-gui-v2"
version = "0.1.0"
edition = "2024"
description = "Rust and egui rewrite of a portable GUI for yt-dlp."
readme = ".github/README.md"
license = "MIT"
publish = false

[[bin]]
name = "yt-dlp-gui"
path = "src/main.rs"

[dependencies]
arboard = "3.6"
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "glow"] }
egui_extras = { version = "0.33", default-features = false, features = ["http", "image", "svg", "webp"] }
image = { version = "0.25", default-features = false, features = ["ico", "jpeg", "png", "webp"] }
rustls = { version = "0.23.38", default-features = false, features = ["ring", "std"] }
ureq = "2.12.1"
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
zip = { version = "2.4", default-features = false, features = ["deflate"] }


[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
incremental = false

[target.'cfg(windows)'.dependencies]
win32_notif = { version = "0.15.2", features = ["registration"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
